src/objects/Meeting_Slot__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Match_Setup__c</fullName>
        <label>Match Setup</label>
        <referenceTo>Match_Setup__c</referenceTo>
        <relationshipName>Meeting_Slots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>BLN Meeting Slot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLOT-{000000}</displayFormat>
        <label>Meeting Slot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Meeting Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>